# sgx-genotype-imputation

./: .gitignore  Cargo.toml  README.md  build.sh  build_client.sh  build_sp.sh  clean.sh  common.sh  config.sh  run_client.sh  run_sp.sh  setup_clang.sh  test.sh  test_chr20_rust.sh  test_leakage.sh  test_simulation.sh
app/: Cargo.toml
app/src/: impute.rs  input_feed.rs  main.rs  params.rs
client/: Cargo.toml  settings.json
client/src/: main.rs
data/: chr20_HG00128_hap1_chunk1_dat.txt  chr20_HG00128_hap1_chunk1_ind.txt  chr20_HG00128_hap2_chunk1_dat.txt  chr20_HG00148_hap1_chunk1_dat.txt  chr20_HG00148_hap2_chunk1_dat.txt  chr20_HG00257_hap1_chunk1_dat.txt  chr20_HG00257_hap2_chunk1_dat.txt
experiments/: settings.sh
experiments/minimac/: cmd.sh  mem_measure.sh  time.sh
experiments/rust_leaky_nosgx/: build.sh  cleanup.sh  cmd.sh  mem_measure.sh
experiments/rust_leaky_sgx/: build.sh  cmd.sh  setup.sh  time.sh
experiments/rust_noleak_nosgx/: build.sh  cleanup.sh  cmd.sh  time.sh
experiments/rust_noleak_sgx/: build.sh  cleanup.sh  mem_measure.sh
experiments/scripts/: find_heap_peak.py  mem_measure.sh  time.sh
host/: Cargo.toml
host/src/: main.rs
m3vcf/: Cargo.toml
m3vcf/src/: block.rs  lib.rs  ref_panel.rs
minimac/: Cargo.toml  README.md  gen_input.py  input_template.vcf  parse_output.py
minimac/app/: cache_server.rs  client.rs  host.rs  server.rs  test_run.rs
minimac/benches/: impute.rs
minimac/src/: impute.rs  lib.rs  symbol.rs  symbol_vec.rs
minimac/src/cache/: local.rs  mod.rs  nonenclave.rs  offload_nt.rs
minimac/src/cache/backend/: mod.rs  tcp.rs
minimac/src/cache/offload/: mod.rs
minimac/src/cache/offload/backend/: mod.rs  nonenclave_local.rs  tcp.rs
minimac/src/input/: dynamic.rs  mod.rs  owned.rs
minimac/src/ln_fixed/: fixed_inner.rs  fixed_inner_32.rs  fixed_inner_64.rs  implement.rs  mod.rs
minimac/src/ref_panel/: dynamic.rs
minimac/test_data/: large_output_ref.txt
minimac/tests/: integration.rs
mmac-rust/: Cargo.toml  README.md  README.txt  gen_input.py  gen_template.py  input.vcf  input_dat.txt  input_ind.txt  output_minimac.txt  run_minimac.sh
mmac-rust/app/: cache_server.rs  client.rs  host.rs  input_feed.rs  ref_panel_feed.rs  server.rs  test_run.rs
mmac-rust/benches/: impute.rs
mmac-rust/src/: bacc.rs  block.rs  const_time.rs  impute.rs  input.rs  lib.rs  ln_fixed.rs  ln_wrapped.rs  main.rs  output.rs  ref_panel.rs  symbol.rs  wrapped.rs
mmac-rust/src/cache/: file.rs  local.rs  mod.rs  offload.rs
mmac-rust/src/cache/offload/: mod.rs
mmac-rust/src/cache/offload/backend/: encryption.rs  file.rs  mod.rs  tcp.rs
mmac-rust/src/input/: dynamic.rs  mod.rs  owned.rs
mmac-rust/src/ln_fixed/: fixed_inner.rs  implement.rs  mod.rs
mmac-rust/src/ref_panel/: dynamic.rs  mod.rs  owned.rs
mmac-rust/test_data/: input.txt  large_input.txt  output_ref.txt  small_input.txt  small_input_ind.txt  small_output_ref.txt  smallref.m3vcf
mmac-rust/tests/: integration.rs
runner/: Cargo.toml
runner/src/: main.rs
scripts/: README.md  input.txt  output.txt  run_minimac.sh  test_chr20_mmac.sh
server/: Cargo.toml
server/src/: main.rs
service-provider/: Cargo.toml
service-provider/src/: main.rs
smac/: Cargo.toml  README.md
smac/app/: cache_server.rs  client.rs  host.rs  test_run.rs
smac/benches/: impute.rs
smac/src/: block.rs  client_input.rs  impute.rs  lib.rs  real_block.rs  ref_panel.rs  tcp.rs
smac/src/cache/backend/: file.rs
smac/src/cache/offload/: mod.rs
smac/src/input/: mod.rs
smac/src/ln_fixed/: fixed_inner_32.rs  fixed_inner_64.rs  implement.rs  mod.rs
smac/src/ref_panel/: dynamic.rs  owned.rs
smac/test_data/: small_input_dat.txt  small_output_log_ref.txt  small_output_ref.txt
smac/test_data/batch/: large_input_symbols_1.txt  large_input_symbols_10.txt  large_input_symbols_11.txt  large_input_symbols_12.txt  large_input_symbols_13.txt  large_input_symbols_14.txt  large_input_symbols_15.txt  large_input_symbols_16.txt  large_input_symbols_2.txt  large_input_symbols_3.txt  large_input_symbols_4.txt  large_input_symbols_5.txt  large_input_symbols_6.txt  large_input_symbols_7.txt  large_input_symbols_8.txt  large_input_symbols_9.txt
smac/tests/: integration.rs
src/: main.rs  params.rs  symbol.rs
tp-fixedpoint/: Cargo.toml
tp-fixedpoint/benches/: my_benchmark.rs
tp-fixedpoint/src/: fixed_32.rs  fixed_64.rs  fixed_inner_32.rs  fixed_inner_64.rs  implement.rs  lib.rs  ln_fixed.rs  tp_i128.rs  tp_u128.rs
