[package]
name = "smac-client"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["smac", "remote-attestation"]
smac-lite = ["smac_lite"]
remote-attestation = ["ra-sp", "sgx-crypto", "serde_json"]

[dependencies]
smac_lite = { package = "smac", path = "../smac", default-features = false, optional = true }
smac = { path = "../smac", optional = true }
bincode = "1.3"
bufstream = "0.1"
ra-sp = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "ce142a5d953f77a982ea480abef499bb0654629b", features = ["verbose"], optional = true }
sgx-crypto = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "ce142a5d953f77a982ea480abef499bb0654629b", optional = true }
serde_json = { version = "1.0", optional = true }

