[package]
name = "smac-host"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smac"]
smac-lite = ["smac_lite"]

[dependencies]
smac_lite = { package = "smac", path = "../smac", default-features = false, optional = true }
smac = { path = "../smac", optional = true }
