[package]
name = "minimac"
version = "0.1.0"
authors = ["Ko Dokmai <natnatee.dokmai@gmail.com>","Hoon Cho <hcho06@gmail.com>"]
edition = "2018"
default-run = "test_run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
leak-resistant = ["paste", "typenum", "timing-shield"]

[dependencies]
ndarray = { version = "0.13" , features = ["serde"] }
lazy_static = "1.4"
bitvec = { version = "0.19", features = ["serde"] }
rand = "0.7"
bincode = "1.3"
byteorder = "1.3"
bufstream = "0.1"
crossbeam = "0.7"
rayon = "1.4"
num-traits = "0.2"
flate2 = "1.0.18"
generic-array = { version = "0.14", features = ["serde"] }
aes-gcm = { version = "0.6", features = ["aes"] }
serde = { version = "1.0", features = ["derive"] }
paste = { version = "1.0", optional = true }
typenum = { version = "1.12", optional = true}
timing-shield = { git = "https://github.com/ndokmai/rust-timing-shield.git", optional = true }

[dev-dependencies]
criterion = "0.3"
pipe = { version = "0.3", features = ["bidirectional"] }

[[bench]]
name = "impute"
harness = false

[[bin]]
name = "test_run"
path = "app/test_run.rs"

[[bin]]
name = "host"
path = "app/host.rs"

[[bin]]
name = "client"
path = "app/client.rs"

[[bin]]
name = "cache_server"
path = "app/cache_server.rs"
