[package]
name = "mmac"
version = "0.1.0"
authors = ["Hoon Cho <hcho06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
leak-resistant = ["ftfp"]

[dependencies]
ndarray = "0.13" 
lazy_static = "1.4"
ftfp = { git = "https://github.com/ndokmai/rust-fixedtimefixedpoint.git", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "impute"
harness = false

[[bin]]
name = "test_run"
path = "app/test_run.rs"
