[package]
name = "mmac"
version = "0.1.0"
authors = ["Hoon Cho <hcho06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
leak-resistant = ["derive_more", "num-traits", "paste", "typenum", "timing-shield"]

[dependencies]
ndarray = "0.13" 
lazy_static = "1.4"
derive_more = { version = "0.99", optional = true }
num-traits = { version = "0.2", optional = true }
paste = { version = "1.0", optional = true }
typenum = { version = "1.12", optional = true}
timing-shield = { git = "https://github.com/ndokmai/rust-timing-shield.git", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "impute"
harness = false

[[bin]]
name = "test_run"
path = "app/test_run.rs"
