[package]
name = "smac-service-provider"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smac", "remote-attestation"]
smac-lite = ["smac_lite"]
sim-mem-measure = []
remote-attestation = ["ra-enclave", "sgx-crypto"]

[dependencies]
smac_lite = { package = "smac", path = "../smac", default-features = false, optional = true }
smac = { path = "../smac", optional = true }
bufstream = "0.1"
rayon = "1.4"

[target.'cfg(target_env = "sgx")'.dependencies]
ra-enclave = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "ce142a5d953f77a982ea480abef499bb0654629b", optional = true }
sgx-crypto = { git = "https://github.com/ndokmai/rust-sgx-remote-attestation.git", rev = "ce142a5d953f77a982ea480abef499bb0654629b", optional = true }

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x20000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x20000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=8
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true
