[package]
name = "smac"
version = "0.1.0"
authors = ["Ko Dokmai <natnatee.dokmai@gmail.com>","Hoon Cho <hcho06@gmail.com>"]
edition = "2018"
default-run = "test_run"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leak-resistant"]
leak-resistant = ["tp-fixedpoint"]

[dependencies]
ndarray = { version = "0.15" , features = ["serde"] }
lazy_static = "1.4"
bitvec = { version = "0.22", features = ["serde"] }
rand = "0.8"
bincode = "1.3"
byteorder = "1.4"
bufstream = "0.1"
rayon = "1.5"
flate2 = "1.0.18"
serde = { version = "1.0", features = ["derive"] }
tp-fixedpoint = { path = "../tp-fixedpoint", optional = true }

[dev-dependencies]
pipe = { version = "0.4", features = ["bidirectional"] }

[[bin]]
name = "test_run"

