[package]
name = "smac"
version = "0.1.0"
authors = ["Ko Dokmai <natnatee.dokmai@gmail.com>","Hoon Cho <hcho06@gmail.com>"]
edition = "2021"
default-run = "test_run"

[features]
default = ["leak-resistant"]
leak-resistant = ["tp-fixedpoint"]

[dependencies]
ndarray = "0.15"
lazy_static = "1.4"
bitvec = "0.22"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
tp-fixedpoint = { path = "../tp-fixedpoint", optional = true }
m3vcf = { path = "../m3vcf" }

[dev-dependencies]
pipe = { version = "0.4", features = ["bidirectional"] }

[[bin]]
name = "test_run"

