[package]
name = "tp-fixedpoint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
ndarray = { version = "0.15" , features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
timing-shield = "0.2"
#typenum = "1.13"
rustats = "0.1"

[dev-dependencies]
bincode = "1.3"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
colored = "2.0"

[[bin]]
name = "timing_leak"
